Need only technical. Essence ready

--- a/report/Clusters Demin 317.tex
+++ b/report/Clusters Demin 317.tex
@@ -97,12 +97,11 @@
 
 \newpage
 \begin{abstract}
-    Выделение скоплений галактик - важная задача современной астрофизики. 
-    Изучая распределение кластеров галактик (и сами кластеры) в космосе, можно исследовать вселенную и процессы, происходящие на разных этапах её развития. 
+    В работе представлен подход к кластеризации зашумлённых данных с неоднородной плотностью, при наличии некоторой априорной информации о распределении кластеров.
     
-    В работе приведён обзор некоторых алгоритмов кластеризации, а также результаты их применения к решению задач кластеризации галактик.
+   Предложенный подход сравнивается с классическими методами кластеризации на примере задачи выделения скоплений галактик по каталогу SDSS.
     
-    \textbf{Не готовы аннотация, часть экспериментов и вывод. }
+    \textbf{Не готовы технические вещи: описание алгоритмов и метрик качества }
     
 \end{abstract}
 
@@ -303,64 +302,67 @@ LossFunc1 $= \mathfrak{L}_1(Y, K) = f_1(K) + \frac{1}{K} \sum_{i=1}^{K \backslas
 
 \subsection{Сравнения методов}
  
-\begin{table}[H]
-\begin{center}
-\begin{tabular}{|l|l|l|l|l|}
+ 
+ \begin{table}[h]
+ \begin{center}
+\begin{tabular}{|l|l|l|l|l|l|l|}
 \hline
-                    & \# subareas & silhouette & (C-H) / $10^3$ & ($1 -$ D-B) \\ \hline
-Mean Shift          & 4           & 0.34       & 21       & 0.15      \\ \hline
-Mini Batch K-means  & 4           & 0.22       & \textbf{49}       & -0.1      \\ \hline
-optimized DBSCAN    & 5           & 0.11       & 12       & 0.23      \\
-optimized DBSCAN NH & 5           & \textbf{0.42}       & 41       & \textbf{0.32}      \\ \hline
-optimized DBSCAN    & 4           & 0.13       & 17       & 0.23      \\
-optimized DBSCAN NH & 4           & \textbf{0.49}       & \textbf{59}       & \textbf{0.4}       \\ \hline
+                    & \# subareas & silhouette    & C-H / $10^3$    & ($1 -$ D-B)    & K             & $\frac{1}{K}\sum_{k=1}^{K}N(k)$           \\ \hline
+Mean Shift          & 4           & 0.34          & 21          & 0.15         & 2867          & 105          \\ \hline
+Mini Batch K-means  & 4           & 0.22          & \textbf{49} & -0.1         & \textbf{1570} & 478          \\ \hline
+optimized DBSCAN    & 5           & 0.11          & 12          & 0.23         & 1391          & 170          \\
+optimized DBSCAN NH & 5           & \textbf{0.42} & 41          & 0.32         & \textbf{1510} & \textbf{123} \\ \hline
+optimized DBSCAN    & 4           & 0.13          & 17          & 0.23         & 890           & 178          \\
+optimized DBSCAN NH & 4           & \textbf{0.49} & \textbf{59} & \textbf{0.4} & 992           & \textbf{111} \\ \hline
 \end{tabular}
 \caption{Сравнение метод кластеризации}\label{all_methods}
 \end{center}
 \end{table}
  
+
+ 
  В Таблице \ref{all_methods} приведены результаты работы различных методов. Колонка \#subareas показывает насколько частей делилась исходная выборка; silhouette содержит значения соответствующего коэффициента; колонка C-H$/10^3$ заполнена значениями Calinski-Harabasz Index, делёнными на 1000; (1-DB) - Davies–Bouldin index, вычтенные из 1 (так как лучшей классификации соответствует меньшее значение, применяем такое преобразование для согласованности с другими индексами). optimized DBSCAN - это оптимизированный алгоритм без дополнительного подбора параметров на областях, соответствующих большим кластерам; optimized DBSCAN NH - с дополнительным подбором и разбиением соответсвующих областей.
  
-Мы видим, что простой подбор 
+Мы видим, что простой подбор параметров для DBSCAN на всей области даёт крайне низкие результаты - ясно, что это происходит из-за наличия очень больших кластеров (в таблице \ref{hugest_clusters} приведены размеры наибольших кластеров до переподсчёта параметров и после). Однако после перенастройки результаты заметно возрастают и становятся лучше других алгоритмов. Различие 3-го и 4-го алгоритмов состоит в том, как изначально делится обучающая выборка (см рисунок \ref{distrib.pdf}: в случае, когда используется 4 подвыборки деление производится по расстоянию, равному 0.11 и азимутному углу, равному 180. Идея в том, что количество объектов в областях примерно одно и то же, но плотности могут незначительно варироваться. В случае же когда ипользуется 5 подвыборок деление происходит так: одна подвыборка - это объекты, нахдящиеся на расстоянии больше 0.2, а 4 остальных аналогично делятся по расстоянию, равному 0.1 и углу 180. Лучший алгоритм в смысле метрик кластеризации оказался тот, который оперирует 4 подвыборками, однако он не очень хорош в смысле выполнения априорных данных: кластеров намного меньше. Так получается, скорее всего потому, что алгоритм настраивается на меньшее число кластеров - они лучше отделены, следовательно все коэффициенты показывают лучший результат. Однако больший интерес с точки зрения физики составляет 3ий алгоритм. 
 
+Заметим, что немалую роль играет время обучения алгоритмов: одна итерация DBSCAN на 170000 объектов (столько примерно составлет одна подвыборка) занимает 2-3 секунды. Количество итераций алгоритма для подбора хороших параметров с помощью дифференциальной эволюции примерно составляет 360 итераций. Итого (с учётом того, что областей 4) получается около 30 минут.
+Mean Shift (который по экспериментам показывает не самый плохой результат занимает 4 часа для сходимости. Учитывая, что его нужно запускать также несколько раз, чтобы определить значение параметра bandwith, то решение задачи этим методом занимает несравнимо больше времени. 
+
+\begin{figure}[]
+  \centering
+  \includegraphics[width=12cm, height=12cm]{distrib.pdf}
+  \caption{Распределение координат галактик}
+  \label{errors_T(4)}
+\end{figure}
+
+
+
+\begin{table}[h]
+\begin{center}
+\begin{tabular}{|l|llllllll|}
+\hline
+DBSCAN\_5   & 18620 & 18620 & 8365 & 6995 & 3517 & 3315 & 2977 & 2693\\
+DBSCAN\_5 NH& 2218 & 1113 & 1047 & 1001 & 936 & 912 & 845 & 840\\ \hline
+DBSCAN\_4   & 28683 & 18634 &  4989 & 2713 & 1535 & 1366 & 1270 & 1151\\
+DBSCAN\_4 NH& 2021 & 937 & 835 & 663 & 662 & 662 & 667 & 604\\
+\hline
+\end{tabular}
+\caption{Наибольшие по размеру кластеры}\label{hugest_clusters}
+\end{center}
+\end{table}
 
 
 
 \section{Заключение}
 
-В~квалификационных работах последний раздел нужен для того, чтобы
-конспективно перечислить основные результаты, полученные лично автором.
+В данной работе был предложен подход, основанный на дифференциальной эволюции и алгоритме DBSCAN для решения залачи кластеризации сильно зашумленных данных с некоторой изсестной априорной информацией о распределении кластеров. Данный подход отличается от VDBSCAN тем, что не требует определения множества параметров eps с помощью графика распределений расстояний до k-го соседа (что очень трудно сделать в сильно зашумлённых данных).
 
-Результатами, в~частности, являются:
-\begin{itemize}
-\item
-    Предложен новый подход к\dots
-\item
-    Разработан новый метод\dots, позволяющий\dots
-\item
-    Доказан ряд теорем, подтверждающих (опровергающих), что\dots
-\item
-    Проведены вычислительные эксперименты\dots,
-    которые подтвердили / опровергли / привели к~новым постановкам задач.
-\end{itemize}
-
-Цель данного раздела: доказать квалификацию автора.
-Даже беглого взгляда на заключение должно быть достаточно, чтобы стало ясно:
-автору удалось решить актуальную, трудную, ранее не~решённую задачу,
-предложенные автором решения обоснованы и~проверены.
-
-Иногда в~Заключении приводится список направлений дальнейших исследований.
+Была решена задача кластеризации галактик по каталогу SDSS. 
+В дальнейшем с помощью варьирования или замены функций (\ref{F_num_clusters}, \ref{F_num_in1cluster}) на другие, выражающие иные априорные представления (характерный размер кластеров в единицах расстояния, их форма), возможно улучшить результаты этой кластеризации
 
 \newpage
 Список литературы необходим в~любой научной публикации.
-В дипломной работе он~обязателен.
-Дурным тоном считается:
-ссылаться на работы только одного-двух авторов (например, себя или шефа);
-ссылаться на слишком малое число работ;
-ссылаться только на очень старые работы;
-ссылаться на работы, которых автор ни разу не видел;
-ссылаться на~работы, которые не~упоминаются в~тексте
-или которые не~имеют отношения к~данному тексту.
+
 \section{Литература}
 
 \begin{thebibliography}{2}
@@ -388,10 +390,6 @@ DATA FROM THE SDSS-IV SURVEY MAPPING NEARBY GALAXIES AT APACHE POINT OBSERVATORY
 
 \bibitem{Abell}
 Abell, G. O. (1958).''The distribution of rich clusters of galaxies. A catalogue of 2712 rich clusters found on the National Geographic Society Palomar Observatory Sky Survey''. The Astrophysical Journal Supplement Series, 3,: 211—288.
-
-
-\bibitem{q}
-q
 
 \end{thebibliography}
 
